[tool.poetry]
name = "apestoreassistant"
version = "0.1.0"
license = "Apache-2.0"
description = ""
authors = ["Idom"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
